--- a/css/app.css
+++ b/css/app.css
@@ -56,5 +56,7 @@ body{
   position: fixed;
   background-image: url(../images/paw_icon_big.svg);
   background-repeat: no-repeat;
+  width: 100%;
+  text-align: center;
 
 }
