--- a/css/app.css
+++ b/css/app.css
@@ -1,23 +1,89 @@
 /*
 selector {property:value;}
 */
+
+h1{
+  font-family: 'Raleway';
+}
+
+/*boxing*/
+div{
+  border: 1px solid red;
+}
+
+/*logo*/
+#logo1{
+
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+/*logo end*/
+
 nav{
   border: 1px solid red;
 }
 
-#indexpage .mainnavigation li:nth-child(1){
+
+
+
+#indexpage .subnavigation li:nth-child(1){
   background-color: yellow;
 
 }
-#portfoliopage .mainnavigation li:nth-child(2){
-  background-color: blue;
+#portfoliopage .subnavigation li:nth-child(2){
+  background-color: yellow;
 
 }
-#aboutpage .mainnavigation li:nth-child(3){
-  background-color: green;
+#aboutpage .subnavigation li:nth-child(3){
+  background-color: yellow;
 
 }
-#contactpage .mainnavigation li:nth-child(4){
-  background-color: orange;
+#contactpage .subnavigation li:nth-child(4){
+  background-color: yellow;
+
+}
+
+.target{
+  color: blue;
+  font-style: red;
+}
+
+.orbit-slide{
+  /*margin: 10px;*/
+}
+
+body{
+  /*background: repeating-linear-gradient(red, yellow 10%, green 20%);*/
+  font-family: 'Roboto', 'Arial', sans-serif;
+  background-image: url('../images/paw_icon_2.jpg');
+
+}
+
+/*feedback page*/
+
+.tealbg {background-color: teal;
+
+}
+
+/* splash page*/
+.bigPaw{
+  margin: 20x;
+  padding: 20px;
+  position: fixed;
+  background-image: url(../images/paw_icon_big.svg);
+  background-repeat: no-repeat;
+  width: 100%;
+  text-align: center;
+
+}
+
+/*about page*/
+.aboutBorder{
+    font-size: 40px;
+    border: 10px white;
+    background: rgb(87, 181, 87);
+    margin: 10px;
+    padding: 10px;
 
 }
