--- a/css/app.css
+++ b/css/app.css
@@ -80,10 +80,10 @@ body{
 
 /*about page*/
 .aboutBorder{
-    font-size: 40px;
+    font-size: 20px;
     border: 10px white;
     background: rgb(87, 181, 87);
-    margin: 10px;
-    padding: 10px;
+    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
 
 }
