--- a/css/app.css
+++ b/css/app.css
@@ -23,9 +23,9 @@ h2{
 }
 /*logo end*/
 
-nav{
+/*nav{
   border: 1px solid red;
-}
+}*/
 
 
 
@@ -63,11 +63,15 @@ body{
 
 }
 
-/*feedback page*/
+/*contact page*/
 
 .tealbg {background-color: teal;
 
 }
+form{
+  margin: 20px;
+}
+
 
 /* splash page*/
 .bigPaw{
@@ -91,5 +95,13 @@ body{
     background: rgb(87, 181, 87);
     margin: 10px 5px 10px 5px;
     padding: 10px 5px 10px 5px;
+
+}
+
+/*portfolio page*/
+.portfolioImage{
+  /*border: 10px solid blue;*/
+  /*margin: 10px 10px 10px 10px;*/
+  padding: 10px 10px 10px 10px;
 
 }
