--- a/css/app.css
+++ b/css/app.css
@@ -10,9 +10,9 @@ h2{
   font-family: 'Roboto';
 }
 /*target-boxing*/
-/* div{
+div{
   border: 1px solid red;
-} */
+}
 
 /*logo*/
 
@@ -32,7 +32,7 @@ h2{
 /* Overhaul 12-5-2018 */
 .WhoAmI{
 
-  margin:auto;
+  margin: auto;
 
 }
 .grid-container{
@@ -75,6 +75,20 @@ h2{
 .portfolioSpacing{
   padding-top: 40px;
 
+}
+
+.ctrImgWide{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+}
+
+.ctrImgTall{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
 }
 
 /* dogs */
